gcc/testsuite/gdc.test/fail_compilation/ice10727b.d
// REQUIRED_ARGS: -c
/*
TEST_OUTPUT:
---
fail_compilation/imports/foo10727b.d(25): Error: undefined identifier `Frop`
---
*/

import imports.foo10727b;
